---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 19/5/25
  Major Features:
    - Added hexic belts.
    - Added technology to unlock hextreme quality.
    - Added tier 4 modules.
    - Hex cores can now be upgraded in quality.
    - Added [planet=gleba].
    - Added [planet=aquilo].
  Features:
    - Items can now be ranked up to the silver and gold star ranks. [img=rank-2] -> [img=rank-3] -> [img=rank-4]
    - Added unique bonuses for silver and gold star ranks.
  Changes:
    - Moved splitters and underground belts to their own subgroups, making it much easier to find the three belt types for each tier in the crafting and item selection menus.
    - Removed tree seeds from trade generation on [planet=nauvis].
  Optimizations:
    - Slightly optimized player iteration for large multiplayer games.
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 18/5/25
  Major Features:
    - Added [planet=fulgora].
    - Added tier 6 quality: hextreme.
  Balancing:
    - Enemy bases and hex cores now increase in quality by distance on all planets.
  Modding:
    - Hextreme quality can be disabled if you want another mod to replace it.
  Bugfixes:
    - Fixed blinking trades in hex cores.
    - [item=crude-oil-barrel] no longer shows up in trades on [planet=vulcanus].
    - Fixed uncommon crash caused by the spawning of hex cores.
  Features:
    - Trades now work on a per-quality basis.
        Normal in, normal out. Rare in, rare out, etc.
        Only one trade is needed for all qualities. Works up to the hex core's quality.
        Coins do not have quality, so they multiply for each quality tier.
        NOTE: Quality purchases require more coins than the coins obtained from selling at the same quality.
        (This is a default mod setting to prevent an infinite coin exploit.)