@@ -1,5 +1,6 @@
 
 require "prototypes.init"
+require "upgrade_discharge"
 
 -- Override title screen music.
 -- data.raw["ambient-sound"]["main-menu"].sound = "__hextorio__/sound/somethingwhatever.ogg"
