@@ -5,6 +5,7 @@ meteor-coin=Meteor Coin
 hexaprism-coin=Hexaprism Coin
 hexaprism=Hexaprism
 claim-tool=Claim Hexes
+tesla-discharge-defense-equipment=Tesla discharge defense
 hexa-speed-module=[color=128,16,0]Hexa Speed Module[.color]
 hexa-productivity-module=[color=128,16,0]Hexa Productivity Module[.color]
 hexa-efficiency-module=[color=128,16,0]Hexa Efficiency Module[.color]
@@ -17,6 +18,7 @@ meteor-coin=[font=heading-1][color=cyan]TIER 3 COIN[.color][.font]\nCan be trade
 hexaprism-coin=[font=heading-1][color=blue]TIER 4 COIN[.color][.font]\nCan be traded. [color=cyan]+1000% to Bragging Rights.[.color]\n\nAuto-converted to lower tiers as needed:\n[img=item.hex-coin]x100,000 <--> [img=item.gravity-coin]x1\n[img=item.gravity-coin]x100,000 <--> [img=item.meteor-coin]x1\n[img=item.meteor-coin]x100,000 <--> [img=item.hexaprism-coin]x1
 hexaprism=A crystalline shard of pure hexagonal energy. Only the most experienced engineer can make use of this.
 claim-tool=Claim all hex cores in the selected area.
+tesla-discharge-defense-equipment=Damages, pushes back and stuns nearby enemies automatically.
 
 [entity-name]
 hex-core=Hex Core
