@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.3
-Date: 19/5/25
+Date: 24/5/25
   Major Features:
     - Added hexic belts.
     - Added technology to unlock hextreme quality.
@@ -12,8 +12,10 @@ Date: 19/5/25
     - Items can now be ranked up to the silver and gold star ranks. [img=rank-2] -> [img=rank-3] -> [img=rank-4]
     - Added unique bonuses for silver and gold star ranks.
   Changes:
-    - Moved splitters and underground belts to their own subgroups, making it much easier to find the three belt types for each tier in the crafting and item selection menus.
+    - Moved splitters and underground belts to their own subgroups, making it much easier to find the three belt types (belt, underground, splitter) for each tier in the crafting and item selection menus.
     - Removed tree seeds from trade generation on [planet=nauvis].
+  Balancing:
+    - Buffed [item=discharge-defense-equipment]. It now functons as a portable tesla turret like Wube Software would have originally intended, given that it has always been an electric beam weapon.
   Optimizations:
     - Slightly optimized player iteration for large multiplayer games.
 ---------------------------------------------------------------------------------------------------
